new version updated for Java 17